--- a/UCSystemsTool/Views/Home/About.cshtml
+++ b/UCSystemsTool/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<h2>@ViewBag.Title.</h2>
+
+<p>De UC Systems Alert Tool kan gebruikt worden om inkomende meldingen te bekijken, filteren, aan te passen of te sluiten.</p>
