--- a/UCSystemsTool/Views/Home/Index.cshtml
+++ b/UCSystemsTool/Views/Home/Index.cshtml
@@ -6,7 +6,8 @@
     <div class="col-md-4">
         <h2>Welkom bij de UC Systems Alert Tool.</h2>
         <p>
-            Welkom bij de UC Systems Alert Tool, hier kunt u uw binnenkomende meldingen filteren, meldingen aanpassen, meldingen inzien en meldingen sluiten. Klik op hieronder of in het bovenstaande menu op "inloggen" om verder te gaan.
+            Welkom bij de UC Systems Alert Tool, hier kunt u uw binnenkomende meldingen filteren, meldingen aanpassen, meldingen inzien en meldingen sluiten. Klik in het bovenstaande menu op "inloggen" om verder te gaan.
         </p>
-        <p><a class="btn btn-default" href="\Account\Login.cshtml">Login &raquo;</a></p>
+        @*<p><a class="btn btn-default" href="\Account\Login.cshtml">Login &raquo;</a></p>*@
+</div>
 </div>
